--- a/app/views/admin/admin_users/_form.html.haml
+++ b/app/views/admin/admin_users/_form.html.haml
@@ -2,4 +2,6 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :email, :email, required: true)
   .list-group-item
+    = render Admin::FieldsetComponent.new(form, :name, :text, required: true)
+  .list-group-item
     = render Admin::FieldsetComponent.new(form, :password, :password, required: true)
