--- a/app/views/admin/admin_users/_index_row.html.haml
+++ b/app/views/admin/admin_users/_index_row.html.haml
@@ -4,6 +4,8 @@
       %i.bi.bi-file-text.h3
   %td
     = admin_user.email
+  %td
+    = admin_user.name
   %td.icon_cell
     = link_to edit_admin_admin_user_path(admin_user), class: 'd-block', data: { turbo_frame: "modal_main" } do
       %i.bi.bi-pencil-square.h3
