--- a/app/views/admin/orders/_form.html.haml
+++ b/app/views/admin/orders/_form.html.haml
@@ -1,6 +1,8 @@
 .list-group.mb-3
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :customer_id, :association_search, association_name: :customer, search_path: admin_customers_path(name_field: :name), name_field: :customer_name)
+  .list-group-item
+    = render Admin::FieldsetComponent.new(form, :admin_user_id, :association_search, association_name: :admin_user, search_path: admin_admin_users_path(name_field: :name), name_field: :admin_user_name)
 .card.mb-3{ data: {controller: 'nested-form'} }
   .card-header
     %div
@@ -23,10 +25,8 @@
     = link_to t('infold.operation.add'), '#', class: 'btn btn-info', data: { action: 'nested-form#add_association' }
 .list-group.mb-3
   .list-group-item
-    %div{class: "row"}
-      %div{class: "col"}
-        = render Admin::FieldsetComponent.new(form, :price, :number, required: true)
-      %div{class: "col"}
-        = render Admin::FieldsetComponent.new(form, :status, :radio, required: true, list: Admin::Order.statuses_i18n.invert)
-      %div{class: "col"}
-        = render Admin::FieldsetComponent.new(form, :paid, :radio, required: true, list: Admin::Order.paids_i18n.invert)
+    = render Admin::FieldsetComponent.new(form, :price, :number, required: true)
+  .list-group-item
+    = render Admin::FieldsetComponent.new(form, :status, :radio, required: true, list: Admin::Order.statuses_i18n.invert)
+  .list-group-item
+    = render Admin::FieldsetComponent.new(form, :paid, :radio, required: true, list: Admin::Order.paids_i18n.invert)
