--- a/app/views/admin/orders/_index_row.html.haml
+++ b/app/views/admin/orders/_index_row.html.haml
@@ -6,13 +6,15 @@
     = order.id
   %td
     = link_to order.customer.name, admin_customer_path(order.customer), data: { turbo_frame: 'modal_sub' } if order.customer
-  %td{class: "text-center"}
+  %td
+    = link_to order.admin_user.name, admin_admin_user_path(order.admin_user), data: { turbo_frame: 'modal_sub' } if order.admin_user
+  %td
     = render Admin::BadgeComponent.new(order.status_i18n, order.status_color)
-  %td{class: "text-center"}
+  %td
     = render Admin::BadgeComponent.new(order.paid_i18n, order.paid_color)
-  %td{class: "text-center"}
+  %td
     = order.price
-  %td{class: "text-center"}
+  %td
     = order.updated_at_field
   %td.icon_cell
     = link_to edit_admin_order_path(order), class: 'd-block', data: { turbo_frame: "modal_main" } do
