--- a/app/views/admin/orders/index.html.haml
+++ b/app/views/admin/orders/index.html.haml
@@ -14,6 +14,9 @@
         = render Admin::FieldsetComponent.new(form, :customer_id_eq, :association_search, alignment: false, 
           label: Admin::Order.human_attribute_name(:customer_id), association_name: :customer, search_path: admin_customers_path(name_field: :name), name_field: :customer_name)
       .mb-3
+        = render Admin::FieldsetComponent.new(form, :admin_user_id_eq, :association_search, alignment: false, 
+          label: Admin::Order.human_attribute_name(:admin_user_id), association_name: :admin_user, search_path: admin_admin_users_path(name_field: :name), name_field: :admin_user_name)
+      .mb-3
         = render Admin::FieldsetComponent.new(form, :status_any, :checkbox, alignment: false, 
           label: Admin::Order.human_attribute_name(:status), list: Admin::Order.statuses_i18n, checked_values: form.object.status_any)
       .mb-3
@@ -32,10 +35,11 @@
       .table_wrapper.table-responsive.bg-secondary-lt{ data: { index_page_target: 'resultTableWrapper' } }
         %table.table.table-hover.table-striped.mb-0.bg-white
           %thead{ data: { index_page_target: 'thead' } }
-            %tr{class: "text-center"}
+            %tr
               %th.icon_cell
               %th= render Admin::SortableComponent.new(@search, :id, label: Admin::Order.human_attribute_name(:id))
               %th= render Admin::SortableComponent.new(@search, :customer_id, label: Admin::Order.human_attribute_name(:customer_id))
+              %th= render Admin::SortableComponent.new(@search, :admin_user_id, label: Admin::Order.human_attribute_name(:admin_user_id))
               %th= render Admin::SortableComponent.new(@search, :status, label: Admin::Order.human_attribute_name(:status))
               %th= render Admin::SortableComponent.new(@search, :paid, label: Admin::Order.human_attribute_name(:paid))
               %th= render Admin::SortableComponent.new(@search, :price, label: Admin::Order.human_attribute_name(:price))
