--- a/app/views/landing/_hero_section.html.haml
+++ b/app/views/landing/_hero_section.html.haml
@@ -1,14 +1,14 @@
-%div{class: "tw-container tw-relative tw-rounded-lg tw-shadow-md tw-flex tw-flex-col tw-items-center tw-mx-auto mb-8 lg:tw-flex-row-reverse lg:tw-max-w-5xl lg:tw-mt-12 xl:tw-max-w-6xl"}
-  %div{class: "tw-w-full tw-h-64 lg:tw-h-auto lg:tw-w-1/2"}
-    = image_tag("services_slide_7_1.jpg", class: "tw-h-full tw-w-full tw-object-cover", alt: "Winding mountain road")
-  %div{class: "tw-max-w-lg tw-bg-white md:tw-max-w-2xl md:tw-z-10 md:tw-shadow-lg md:tw-absolute md:tw-top-0 md:tw-mt-48 lg:tw-left-0 lg:tw-mt-20 lg:tw-ml-20 xl:tw-mt-24 xl:tw-ml-12 lg:tw-w-3/5"}
-    %div{class: "tw-flex tw-flex-col tw-p-12 md:tw-px-16 tw-font-bad_script"}
-      %h2{class: "tw-text-2xl tw-font-medium tw-uppercase tw-text-red-600 lg:tw-text-2xl"} Старим речам - нове життя
-      %p{class: "tw-mt-1 tw-mb-4 tw-text-xl tw-text-stone-800"}
+%div{class: "container relative rounded-lg shadow-md flex flex-col items-center mx-auto mb-8 lg:flex-row-reverse lg:max-w-5xl lg:mt-12 xl:max-w-6xl"}
+  %div{class: "w-full h-64 lg:h-auto lg:w-1/2"}
+    = image_tag("services_slide_7_1.jpg", class: "h-full w-full object-cover", alt: "Winding mountain road")
+  %div{class: "max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-20 lg:ml-20 xl:mt-24 xl:ml-12 lg:w-3/5"}
+    %div{class: "flex flex-col p-12 md:px-16 font-bad_script"}
+      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Старим речам - нове життя
+      %p{class: "mt-1 mb-4 text-xl text-stone-800"}
         Какая-то хреть о том, что вещи старые изнашиваются, рвутся и т.д, а мы их чиним и латаем
-      %h2{class: "tw-text-2xl tw-font-medium tw-uppercase tw-text-red-600 lg:tw-text-2xl"} Новим речам - нове життя
-      %p{class: "tw-mt-1 tw-text-xl tw-text-stone-800"}
+      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Новим речам - нове життя
+      %p{class: "mt-1 text-xl text-stone-800"}
         Какая-то хреть о том, что вещи новые не всегда ладно сидят. Их можно подогнать
-      %div{class: "tw-mt-8"}
-        %a{class: "tw-font-caveat tw-inline-block tw-w-1/3 tw-text-center tw-text-xl tw-font-medium tw-text-red-600 tw-bg-stone-100 hover:tw-bg-stone-200 tw-border tw-border-red-600 tw-font-bold tw-py-2 tw-px-4 tw-rounded-lg", href: "#services"}
+      %div{class: "mt-8"}
+        %a{class: "font-caveat inline-block w-1/3 text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 font-bold py-2 px-4 rounded-lg", href: "#services"}
           Послуги
