--- a/app/views/landing/_services_carousel.html.haml
+++ b/app/views/landing/_services_carousel.html.haml
@@ -1,40 +1,40 @@
-%div{id: "services-carousel", class: "tw-container tw-mx-auto tw-relative tw-w-full", "data-carousel": "slide"}
+%div{id: "services-carousel", class: "container mx-auto relative w-full", "data-carousel": "slide"}
   -# Carousel wrapper
-  %div{class: "tw-relative tw-h-96 tw-overflow-hidden tw-rounded-lg md:tw-h-96"}
+  %div{class: "relative h-96 overflow-hidden rounded-lg md:h-96"}
     -# Item 1
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_1.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_1.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
     -# Item 2
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_2.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_2.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
     -# Item 3
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_3.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_3.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
     -# Item 4
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_4.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_4.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
     -# Item 5
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_5.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_5.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
     -# Item 6
-    %div{class: "tw-hidden tw-duration-1000 ease-in-out", "data-carousel-item": ""}
-      = image_tag("services_slide_6.jpg", class: "tw-absolute tw-block tw-w-full -tw-translate-x-1/2 -tw-translate-y-1/2 tw-top-1/2 tw-left-1/2", alt: "...")
+    %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+      = image_tag("services_slide_6.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
   -# Slider indicators
-  %div{class: "tw-absolute tw-z-30 tw-flex tw-bottom-5 tw-space-x-3 rtl:tw-space-x-reverse tw-translate-x-1/2 tw-left-1/2"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 1", "data-carousel-slide-to": "0", type: "button"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 2", "data-carousel-slide-to": "0", type: "button"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 3", "data-carousel-slide-to": "0", type: "button"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 4", "data-carousel-slide-to": "0", type: "button"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 5", "data-carousel-slide-to": "0", type: "button"}
-    %button{class: "tw-w-3 tw-h-3 tw-rounded-full", "aria-current": "true", "aria-label": "Slide 6", "data-carousel-slide-to": "0", type: "button"}
+  %div{class: "absolute z-30 flex bottom-5 space-x-3 rtl:space-x-reverse translate-x-1/2 left-1/2"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 1", "data-carousel-slide-to": "0", type: "button"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 2", "data-carousel-slide-to": "0", type: "button"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 3", "data-carousel-slide-to": "0", type: "button"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 4", "data-carousel-slide-to": "0", type: "button"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 5", "data-carousel-slide-to": "0", type: "button"}
+    %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 6", "data-carousel-slide-to": "0", type: "button"}
   -# Slider controls
-  %button{class: "tw-absolute tw-top-0 tw-start-0 tw-z-30 tw-flex tw-items-center tw-justify-center tw-h-full tw-px-4 tw-cursor-pointer group-focus:tw-outline-none", "data-carousel-prev": "", type: "button"}
-    %span{class: "tw-inline-flex tw-items-center tw-justify-center tw-w-10 tw-h-10 tw-rounded-full group-focus:tw-ring-4 group-focus:tw-ring-white group-focus:tw-outline-none tw-bg-white/30 group-hover:tw-bg-white/50"}
+  %button{class: "absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group-focus:outline-none", "data-carousel-prev": "", type: "button"}
+    %span{class: "inline-flex items-center justify-center w-10 h-10 rounded-full group-focus:ring-4 group-focus:ring-white group-focus:outline-none bg-white/30 group-hover:bg-white/50"}
       %svg{class: "w-4 h-4 text-white rtl:rotate-180", "aria-hidden": "true", fill: "none", viewbox: "0 0 6 10", xmlns: "http://www.w3.org/2000/svg"}
         %path{d: "M5 1 1 5l4 4", stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
-      %span{class: "tw-sr-only"} Назад
-  %button{class: "tw-absolute tw-top-0 tw-end-0 tw-z-30 tw-flex tw-items-center tw-justify-center tw-h-full tw-px-4 tw-cursor-pointer group-focus:tw-outline-none", "data-carousel-next": "", type: "button"}
-    %span{class: "tw-inline-flex tw-items-center tw-justify-center tw-w-10 tw-h-10 tw-rounded-full group-focus:tw-ring-4 group-focus:tw-ring-white group-focus:tw-outline-none tw-bg-white/30 group-hover:tw-bg-white/50"}
+      %span{class: "sr-only"} Назад
+  %button{class: "absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group-focus:outline-none", "data-carousel-next": "", type: "button"}
+    %span{class: "inline-flex items-center justify-center w-10 h-10 rounded-full group-focus:ring-4 group-focus:ring-white group-focus:outline-none bg-white/30 group-hover:bg-white/50"}
       %svg{class: "w-4 h-4 text-white rtl:rotate-180", "aria-hidden": "true", fill: "none", viewbox: "0 0 6 10", xmlns: "http://www.w3.org/2000/svg"}
         %path{d: "m1 9 4-4-4-4", stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
-      %span{class: "tw-sr-only"} Вперед
+      %span{class: "sr-only"} Вперед
