--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -16,7 +16,7 @@
     %script{:src => "https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/js/tabler.min.js"}
     %script{:src => "https://cdn.jsdelivr.net/npm/flatpickr"}
     = stylesheet_link_tag "admin", "data-turbo-track": "reload"
-    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
+    -#= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = javascript_include_tag "admin", "data-turbo-track": "reload", defer: true, type: "module"
     
     -# FontAwesome
@@ -26,19 +26,19 @@
           rel: "stylesheet"}
     
 
-  %body{:class => "#{'border-top-wide border-primary' unless admin_user_signed_in?}"}
-    #admin_wrapper
+  %body{class: "#{'border-top-wide border-primary' unless admin_user_signed_in?}"}
+    %div{id: "admin_wrapper"}
       - if admin_user_signed_in?
-        %header.navbar.navbar-expand-md
-          .container-fluid
-            %a.navbar-brand.pe-0.pe-md-3{ href: '/admin' } Головна
-            %button.navbar-toggler{"data-bs-target" => "#navbar-menu", "data-bs-toggle" => "collapse", :type => "button"}
-              %span.navbar-toggler-icon
-            #navbar-menu.collapse.navbar-collapse
+        %header{class: "navbar navbar-expand-md bg-body-tertiary"}
+          %div{class: "container-fluid"}
+            %a{class: "navbar-brand pe-0 pe-md-3", href: "/admin"} Головна
+            %button{class: "navbar-toggler", "data-bs-target": "#navbar-menu", "data-bs-toggle": "collapse", type: "button"}
+              %span{class: "navbar-toggler-icon"}
+            %div{id: "navbar-menu", class: "collapse navbar-collapse"}
               = render 'admin/common/header_menu'
               %ul.navbar-nav.ms-auto.mb-2.mb-lg-0
                 %li.nav-item
-                  = link_to 'Користувачі', admin_admin_users_path, class: 'nav-link'
+                  = link_to 'Користувачі', admin_admin_users_path, class: 'nav-link fs-3'
                 %li.nav-item.dropdown
                   %a.nav-link.dropdown-toggle#header_current_user{ role: :button, data: { bs_toggle: :dropdown } }
                     = current_admin_user.email
