--- a/app/views/landing/_1_hero_section.html.haml
+++ b/app/views/landing/_1_hero_section.html.haml
@@ -1,4 +1,4 @@
-%div{class: "container relative rounded-lg shadow-md flex flex-col items-center mx-auto mb-8 lg:flex-row-reverse lg:max-w-5xl lg:mt-12 xl:max-w-6xl"}
+%section{class: "container relative rounded-lg shadow-md flex flex-col items-center mx-auto mb-8 lg:flex-row-reverse lg:max-w-5xl lg:mt-12 xl:max-w-6xl"}
   %div{class: "w-full h-64 lg:h-auto lg:w-1/2"}
     = image_tag("services_slide_7_1.jpg", class: "h-full w-full object-cover", alt: "Winding mountain road")
   %div{class: "max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-20 lg:ml-20 xl:mt-24 xl:ml-12 lg:w-3/5"}
