--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -5,7 +5,7 @@
       %div{class: "flex mx-auto items-center justify-between flex-col md:flex-row w-full text-center md:text-left"}
         %i{class: "text-red-600 h-8 w-8 fa-solid fa-person-chalkboard"}
         %div{class: "flex flex-col py-2 pr-2"}
-          %h4{class: "text-2xl font-light"} Індивідуальний підхід до кожного клієнта
+          %h4{class: "text-2xl font-light"} Індивідуальне відношення до кожного клієнта
         %i{class: "text-red-600 h-8 w-8 fa-solid fa-money-bill-trend-up"}
         %div{class: "flex flex-col py-2 pr-2"}
           %h4{class: "text-2xl font-light"} Гнучкі ціни
