--- a/app/views/landing/_contact_form.html.haml
+++ b/app/views/landing/_contact_form.html.haml
@@ -1,5 +1,5 @@
 -# Modal
-%div{id: "contactFormModal", class: "fixed z-10 inset-0 overflow-y-auto hidden"}
+%div{id: "contactFormModal", class: "fixed z-10 inset-0 overflow-y-auto hidden", "data-turbo": "false"}
   %div{class: "flex items-center justify-center min-h-screen"}
     %div{class: "bg-white p-6 rounded-2xl shadow-md w-1/2"}
       %div{class: "flex justify-end"}
@@ -8,18 +8,18 @@
           %svg{class: "w-6 h-6", fill: "none", stroke: "currentColor", viewbox: "0 0 24 24", xmlns: "http://www.w3.org/2000/svg"}
             %path{d: "M6 18L18 6M6 6l12 12", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
       %h2{class: "text-2xl font-bold mb-4 text-center"} Відправити повідомлення
-      = form_with(model: @landing_message, url: landing_messages_path) do |f|
+      = form_for [@landing_message, LandingMessage.new], remote: false do |f|
         = hidden_field_tag :format, :html
         %div{class: "mb-4"}
           %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "name"} Імʼя
-          = f.text_field :name, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name"
+          = f.text_field :name, required: true, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name"
         %div{class: "mb-4"}
           %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "phone"} Телефон
-          = f.telephone_field :phone, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone'
+          = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone'
         %div{class: "mb-4"}
           %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "email"} E-mail
-          = f.email_field :email, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'email'
+          = f.email_field :email, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'email'
         %div{class: "mb-4"}
           %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "message"} Ваше повідомлення
-          = f.text_area :message, size: "70x2", class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'message'
+          = f.text_area :message, required: true, size: "70x2", class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'message'
         = f.submit 'Відправити', data: { disable_with: false }, class: "cursor-pointer font-caveat inline-block w-1/3 rx-auto text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 rounded-lg font-bold py-2 px-4", type: "submit"
