--- a/app/views/landing/_reviews.html.haml
+++ b/app/views/landing/_reviews.html.haml
@@ -1,1 +1,49 @@
-%div{class: "h-screen"}reviews
+%section{class: "container font-caveat mx-auto px-4 space-y-6 bg-stone-100 py-8 md:py-10 lg:py-14"}
+  %div{class: "container mx-auto px-8 lg:flex"}
+    %div{class: "text-center lg:text-left lg:w-1/2"}
+      %h1{class: "text-4xl lg:text-5xl xl:text-6xl font-bold leading-none"}Main title of your landing page</h1>
+      %p{class: "text-xl lg:text-2xl mt-6 font-light"} Free landing page template to promote your business startup and generate leads for the offered services
+      %p{class: "mt-8 md:mt-12"}
+        %button{type: "button", class: "py-4 px-12 bg-teal-500 hover:bg-teal-600 rounded text-white"}Get Started
+        %p{class: "mt-4 text-gray-600"}Sed fermentum felis ut cursu
+    %div{class: "lg:w-1/2"}
+      %div{id: "services-carousel", class: "container mx-auto relative w-full", "data-carousel": "slide"}
+        -# Carousel wrapper
+        %div{class: "relative h-96 overflow-hidden rounded-lg md:h-96"}
+          -# Item 1
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_1.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+          -# Item 2
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_2.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+          -# Item 3
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_3.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+          -# Item 4
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_4.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+          -# Item 5
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_5.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+          -# Item 6
+          %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
+            = image_tag("services_slide_6.jpg", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+        -# Slider indicators
+        %div{class: "absolute z-30 flex bottom-5 space-x-3 rtl:space-x-reverse translate-x-1/2 left-1/2"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 1", "data-carousel-slide-to": "0", type: "button"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 2", "data-carousel-slide-to": "0", type: "button"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 3", "data-carousel-slide-to": "0", type: "button"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 4", "data-carousel-slide-to": "0", type: "button"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 5", "data-carousel-slide-to": "0", type: "button"}
+          %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 6", "data-carousel-slide-to": "0", type: "button"}
+        -# Slider controls
+        %button{class: "absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group-focus:outline-none", "data-carousel-prev": "", type: "button"}
+          %span{class: "inline-flex items-center justify-center w-10 h-10 rounded-full group-focus:ring-4 group-focus:ring-white group-focus:outline-none bg-white/30 group-hover:bg-white/50"}
+            %svg{class: "w-4 h-4 text-white rtl:rotate-180", "aria-hidden": "true", fill: "none", viewbox: "0 0 6 10", xmlns: "http://www.w3.org/2000/svg"}
+              %path{d: "M5 1 1 5l4 4", stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
+            %span{class: "sr-only"} Назад
+        %button{class: "absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group-focus:outline-none", "data-carousel-next": "", type: "button"}
+          %span{class: "inline-flex items-center justify-center w-10 h-10 rounded-full group-focus:ring-4 group-focus:ring-white group-focus:outline-none bg-white/30 group-hover:bg-white/50"}
+            %svg{class: "w-4 h-4 text-white rtl:rotate-180", "aria-hidden": "true", fill: "none", viewbox: "0 0 6 10", xmlns: "http://www.w3.org/2000/svg"}
+              %path{d: "m1 9 4-4-4-4", stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
+            %span{class: "sr-only"} Вперед
