--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,74 +1,28 @@
-%section{class: "container relative rounded-lg shadow-md flex flex-col items-center mx-auto mb-8 lg:flex-row-reverse lg:max-w-5xl lg:mt-12 xl:max-w-6xl"}
-  %div{class: "w-full h-64 lg:h-auto lg:w-1/2"}
-    = image_tag("services_slide_7_1.jpg", class: "h-full w-full object-cover", alt: "Winding mountain road")
-  %div{class: "max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-20 lg:ml-20 xl:mt-24 xl:ml-12 lg:w-3/5"}
-    %div{class: "flex flex-col p-12 md:px-16 font-bad_script"}
-      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Старим речам - нове життя
-      %p{class: "mt-1 mb-4 text-xl text-stone-800"}
-        Какая-то хреть о том, что вещи старые изнашиваются, рвутся и т.д, а мы их чиним и латаем
-      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Новим речам - нове життя
-      %p{class: "mt-1 text-xl text-stone-800"}
-        Какая-то хреть о том, что вещи новые не всегда ладно сидят. Их можно подогнать
-      %div{class: "mt-8"}
-        %a{class: "font-caveat inline-block w-1/3 text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 font-bold py-2 px-4 rounded-lg", href: "#services"}
-          Послуги
-
-%section{class: "pt-20 md:pt-40 element-show"}
-  %div{class: "container mx-auto px-8 lg:flex element-animation"}
-    %div{class: "text-center lg:text-left lg:w-1/2"}
-      %h1{class: "text-4xl lg:text-5xl xl:text-6xl font-bold leading-none"}Main title of your landing page</h1>
-      %p{class: "text-xl lg:text-2xl mt-6 font-light"} Free landing page template to promote your business startup and generate leads for the offered services
-      %p{class: "mt-8 md:mt-12"}
-        %button{type: "button", class: "py-4 px-12 bg-teal-500 hover:bg-teal-600 rounded text-white"}Get Started
-        %p{class: "mt-4 text-gray-600"}Sed fermentum felis ut cursu
-    %div{class: "lg:w-1/2"}
-      Picture here
-
-%section{id: "features", class: "py-20 lg:pb-40 lg:pt-48"}
-  %div{class: "container mx-auto text-center"}
-    %h2{class: "text-3xl lg:text-3xl font-semibold"} Main Features
-    %div{class: "flex flex-col md:flex-row sm:mx-3 mt-12"}
-      %div{class: "flex-1 px-3"}
-        %div{class: "p-12 rounded-lg border border-solid border-gray-200 mb-8", style: "box-shadow:0 10px 28px rgba(0,0,0,.08)"}
-          %p{class: "font-semibold text-xl"}
-            Service 1
-          %p{class: "mt-4"}
-            An enim nullam tempor gravida donec enim ipsum blandit porta justo
-            integer odio velna vitae auctor integer.
-      %div{class: "flex-1 px-3"}
-        %div{class: "p-12 rounded-lg border border-solid border-gray-200 mb-8", style: "box-shadow:0 10px 28px rgba(0,0,0,.08)"}
-          %p{class: "font-semibold text-xl"}
-            Service 2
-          %p{class: "mt-4"}
-            An enim nullam tempor gravida donec enim ipsum blandit porta justo
-            integer odio velna vitae auctor integer.
-      %div{class: "flex-1 px-3"}
-        %div{class: "p-12 rounded-lg border border-solid border-gray-200 mb-8", style: "box-shadow:0 10px 28px rgba(0,0,0,.08)"}
-          %p{class: "font-semibold text-xl"}
-            Service 3
-          %p{class: "mt-4"}
-            An enim nullam tempor gravida donec enim ipsum blandit porta justo
-            integer odio velna vitae auctor integer.
-
-
-
-
-
 %div{class: "", id: ""}
-  %div{class: "py-16 opacity-0 element-animation", id: "hero-section"}
-    -#= render "hero_section"
   
-  %div{class: "py-16 opacity-0 element-animation", id: "services"}
-    -#= render "services"
+  -# Modal dialog contact form
+  = render "contact_form"
+  
+  %div{class: "position-relative py-8 opacity-0 element-animation", id: "hero-section"}
+    = render "1_hero_section"
+  
+  %div{class: "position-relative py-8 opacity-0 element-animation", id: "services"}
+    = render "2_services"
 
-  %div{class: "opacity-0 element-animation", id: "about"}
-    -#= render "about"
+  %div{class: "position-relative opacity-0 element-animation", id: "about"}
+    = render "about"
 
-  %div{class: "opacity-0 element-animation", id: "reviews"}
-    -#= render "reviews"
+  %div{class: "position-relative opacity-0 element-animation", id: "reviews"}
+    = render "reviews"
 
-  %div{class: "opacity-0 element-animation", id: "contacts"}
-    -#= render "contacts"
+  %div{class: "position-relative opacity-0 element-animation", id: "contacts"}
+    = render "contacts"
+
+  %div{class: "position-relative opacity-0 element-animation", id: "contact_form"}
+    = render "contact_form"
+  
+  %footer{class: "", id: "footer"}
+    = render "footer"
   
 -# Scroll to Top button
 %div{class: "fixed bottom-10 end-10", id: ""}
@@ -76,6 +30,3 @@
     %i{class: "text-2xl text-stone-600 fa-solid fa-jet-fighter-up"}
   %div{id: "scroll-to-top", class: "w-24 absolute z-10 invisible inline-block transition-opacity duration-300", "data-popover": "", role: "tooltip"}
     %p{class: "font-caveat text-xl text-stone-600"} До початку
-
--# Modal dialog contact form
-= render "contact_form"
