--- a/app/views/landing/_1_hero_section.html.haml
+++ b/app/views/landing/_1_hero_section.html.haml
@@ -1,14 +1,12 @@
-%section{class: "container relative rounded-lg shadow-md flex flex-col items-center mx-auto mb-8 lg:flex-row-reverse lg:max-w-5xl lg:mt-12 xl:max-w-6xl"}
-  %div{class: "w-full h-64 lg:h-auto lg:w-1/2"}
-    = image_tag("services_slide_7_1.jpg", class: "h-full w-full object-cover", alt: "Winding mountain road")
-  %div{class: "max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-20 lg:ml-20 xl:mt-24 xl:ml-12 lg:w-3/5"}
-    %div{class: "flex flex-col p-12 md:px-16 font-bad_script"}
-      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Старим речам - нове життя
-      %p{class: "mt-1 mb-4 text-xl text-stone-800"}
-        Какая-то хреть о том, что вещи старые изнашиваются, рвутся и т.д, а мы их чиним и латаем
-      %h2{class: "text-2xl font-medium uppercase text-red-600 lg:text-2xl"} Новим речам - нове життя
-      %p{class: "mt-1 text-xl text-stone-800"}
-        Какая-то хреть о том, что вещи новые не всегда ладно сидят. Их можно подогнать
-      %div{class: "mt-8"}
-        %a{class: "font-caveat inline-block w-1/3 text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 font-bold py-2 px-4 rounded-lg", href: "#services"}
-          Послуги
+%div{class: "py-3 sm:py-6"}
+  %div{class: "mx-auto container px-6 lg:px-8"}
+    %div{class: "mx-auto max-w-2xl text-center font-bad_script"}
+      %h1{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
+        Даруємо старим речам нове життя
+      %p{class: "mt-6 leading-8 text-gray-600 text-xl"}
+        Надаємо якісні послуги з ремонту верхнього та легкого одягу.
+        Якість послуг та ціни змушують наших клієнтів приходити до нас знову та знову.
+    %div{class: "mt-3 flow-root sm:mt-6"}
+      %div{class: "rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
+        = image_tag("hero.png", class: "", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+
