--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,10 +6,14 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %meta{:content => "ремонт одягу пошив індивідуальний пошив ремонт одежды укоротить брюки штаны юбка платье", :name => "description"}
 
+    -# Google fonts
     %link{href: "https://fonts.googleapis.com", rel: "preconnect"}
     %link{crossorigin: "", href: "https://fonts.gstatic.com", rel: "preconnect"}
-    %link{href: "https://fonts.googleapis.com/css2?family=Bad+Script&family=Caveat:wght@400..700&display=swap", rel: "stylesheet"}
-    
+    %link{href: "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", rel: "stylesheet"}
+    %link{:href => "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", :rel => "stylesheet"}
+
+
+
     -# FontAwesome
     %link{crossorigin: "anonymous",
           href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css",
