--- a/app/views/landing/_1_hero_section.html.haml
+++ b/app/views/landing/_1_hero_section.html.haml
@@ -1,12 +1,12 @@
-%div{class: "py-3 sm:py-6"}
+%div{class: "py-3 sm:py-6 mt-2 sm:mt-6 lg:mt-16"}
   %div{class: "mx-auto container px-6 lg:px-8"}
-    %div{class: "mx-auto max-w-2xl text-center font-bad_script"}
+    %div{class: "mx-auto max-w-2xl text-center font-messiri"}
       %h1{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
         Даруємо старим речам нове життя
       %p{class: "mt-6 leading-8 text-gray-600 text-xl"}
         Надаємо якісні послуги з ремонту верхнього та легкого одягу.
         Якість послуг та ціни змушують наших клієнтів приходити до нас знову та знову.
-    %div{class: "mt-3 flow-root sm:mt-6"}
+    %div{class: "mt-3 flow-root"}
       %div{class: "rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
         = image_tag("hero.png", class: "", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
 
