--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -1,6 +1,6 @@
 %section{class: "relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6"}
-    %h1{class: "text-2xl py-2 font-bad_script text-center font-bold tracking-tight sm:text-3xl font-medium text-red-600"}
+    %h1{class: "text-2xl py-2 font-messiri text-center font-bold tracking-tight sm:text-3xl font-medium text-red-600"}
       %span{class: "text-3xl"} Більше
       %span{class: "text-4xl"} 15
       %span{class: "text-3xl"} років досвіду роботи. Понад
