--- a/app/views/landing/_5_reviews.html.haml
+++ b/app/views/landing/_5_reviews.html.haml
@@ -1,4 +1,4 @@
-%section{class: "container font-caveat mx-auto px-4 space-y-6 bg-stone-100 py-8 md:py-10 lg:py-14"}
+%section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 py-8 md:py-10 lg:py-14"}
   %div{class: "container mx-auto px-8 lg:flex"}
     %div{class: "text-center lg:text-left lg:w-1/2"}
       %h1{class: "text-4xl lg:text-5xl xl:text-6xl font-bold leading-none"}Main title of your landing page</h1>
