--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Швейна майстерня ☞ ДРУЖБА ☜
     = favicon_link_tag asset_path('favicon.png')
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %meta{:content => "ремонт одягу пошив індивідуальний пошив ремонт одежды укоротить брюки штаны юбка платье", :name => "description"}
 
