--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,7 +3,7 @@
   -# Modal dialog contact form
   = render "contact_form"
   
-  %div{class: "position-relative mt-2 opacity-0 element-animation", id: "hero-section"}
+  %div{class: "position-relative opacity-0 element-animation", id: "hero-section"}
     = render "1_hero_section"
   
   %div{class: "position-relative mt-8 opacity-0 element-animation", id: "services"}
