--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -1,33 +1,29 @@
-%section{class: "relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
+%section{class: "font-messiri relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6"}
-    %h1{class: "text-2xl py-2 font-messiri text-center font-bold tracking-tight sm:text-3xl font-medium text-red-600"}
-      %span{class: "text-3xl"} Більше
-      %span{class: "text-4xl"} 15
-      %span{class: "text-3xl"} років досвіду роботи. Понад
-      %span{class: "text-4xl"}5000
-      %span{class: "text-3xl"} задоволених клієнтів.
+    %h1{class: "text-3xl py-2 font-messiri text-center font-bold tracking-tight font-medium text-red-600"}
+      Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
   %div{class: "grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-3"}
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("zip.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Заміна замків у верхньому та легкому одягу
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
-        Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
-        Ми проведемо швидку його заміну, і ваш виріб прослужить ще не один день.
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#  Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
+      -#  Ми проведемо швидку його заміну, і ваш виріб прослужить ще не один день.
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("djeans.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Штопка (штуковка джинсових виробів)
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
-        штуковка
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#  штуковка
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("skin.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Ремонт шкіряних та хутрових виробів
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
-        Ремонт шкіряних та хутрових виробів
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#  Ремонт шкіряних та хутрових виробів
 
 
