--- a/app/views/landing/_4_about.html.haml
+++ b/app/views/landing/_4_about.html.haml
@@ -1,53 +1,43 @@
-%section
-  .py-12.bg-white
+%section.font-messiri
+  .py-12.bg-stone-100
     .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
       .lg:text-center
         %h2.font-heading.mb-4.bg-orange-100.text-orange-800.px-4.py-2.rounded-lg.md:w-64.md:mx-auto.text-xs.font-semibold.tracking-widest.text-black.uppercase.title-font
-          Why choose us?
-        %p.font-heading.mt-2.text-3xl.leading-8.font-semibold.tracking-tight.text-gray-900.sm:text-4xl
-          We know tech, we know finance. We are fintech experts.
+          Чому на довіряють?
+        %p.font-heading.mt-2.text-3xl.leading-8.font-semibold.tracking-tight.text-red-600.sm:text-4xl
+          Багаторічний досвід та бездоганна репутація.
         %p.mt-4.max-w-2xl.text-lg.text-gray-500.lg:mx-auto
-          We know how to handle taxation for all the
-          countried we operate in. We care for our customers and help them manage cashflows.
+          Ми уважно вислухаємо кожного клієнта, порадимо найкраще рішення, якісно та швидко виконаємо замовлення.
       .mt-10
         %dl.space-y-10.md:space-y-0.md:grid.md:grid-cols-2.md:gap-x-8.md:gap-y-10
           .relative
             %dt
               .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
-                %img{:src => "https://www.svgrepo.com/show/503163/api-settings.svg"}/
-              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700 Powerful API
+                = image_tag "mashine.svg"
+              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700 Нове сучасне обладнання
             %dd.mt-2.ml-16.text-base.text-gray-500
-              Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate
-              blanditiis ratione.
+              Ми використовуємо найновіше обладнання, завдяки якому якість робіт завжди на виокому рівні.
           .relative
             %dt
               .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
-                %img{:src => "https://www.svgrepo.com/show/503138/webpack.svg"}/
+                = image_tag "button.svg"
               %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
-                Easy to integrate
-                SDK
+                Дипломовані майстри
             %dd.mt-2.ml-16.text-base.text-gray-500
-              Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate
-              blanditiis ratione.
+              Всі наші майстри мають профільну освіту, та володіють сучасними технологіями ремонту одягу та крою.
           .relative
             %dt
               .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
-                %img{:src => "https://www.svgrepo.com/show/511771/dashboard-671.svg"}/
+                = image_tag "model.svg"
               %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
-                Low Transaction Cost
+                Гнучкі ціни
             %dd.mt-2.ml-16.text-base.text-gray-500
-              Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate
-              blanditiis ratione.
+              Наші ціні вас приємно здивують. Для кожного знайдемо найприйнятніше рішення.
           .relative
             %dt
               .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
-                %img{:src => "https://www.svgrepo.com/show/76267/free-commercial-label.svg"}/
+                = image_tag "spool.svg"
               %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
-                Powerful Dashboard
+                Гарантія якості
             %dd.mt-2.ml-16.text-base.text-gray-500
-              Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate
-              blanditiis ratione.
+              Ми гарантуємо якісне та швидке обслуговування.
