--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -15,8 +15,8 @@
   %div{class: "position-relative mt-16 opacity-0 element-animation", id: "about"}
     = render "4_about"
 
-  %div{class: "position-relative mt-16 opacity-0 element-animation", id: "reviews"}
-    = render "5_reviews"
+  -#%div{class: "position-relative mt-16 opacity-0 element-animation", id: "reviews"}
+  -#  = render "5_reviews"
 
   %div{class: "position-relative mt-16 opacity-0 element-animation", id: "contacts"}
     = render "6_contacts"
