--- a/app/views/landing/_3_services.html.haml
+++ b/app/views/landing/_3_services.html.haml
@@ -2,26 +2,26 @@
   %div{class: "rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
     = image_tag("hero-2.png", class: "", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
 
-%section{class: "relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
+%section{class: "font-messiri relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-3"}
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("niz.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("niz.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Підгін низу (джинси, сукні, пальто та інші речі)
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
         Підгін низу (джинси, сукні, пальто та інші речі)
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("melkiy.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("melkiy.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Дрібний ремонт одягу
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
-        Дрібний ремонт одягу
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#  Дрібний ремонт одягу
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
-        = image_tag("shtory.png", class: "object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("shtory.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
       %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
         Підшивання штор
-      %p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
         Підшивання штор
