--- a/app/views/landing/_7_footer.html.haml
+++ b/app/views/landing/_7_footer.html.haml
@@ -1,12 +1,7 @@
-%footer{class: "py-4 px-4 shadow-md z-10 flex justify-content-center align-items-center bg-stone-200"}
-  %div{class: "text-sm text-gray-600"}
-    Copyright © 2022-#{Date.today.strftime('%Y')} Швейна майстерня ☞ ДРУЖБА ☜
-  -#.flex.ml-auto.gap-4
-    %a.text-gray-700.hover:text-gray-900{:href => "#"}
-      Terms
-    %a.text-gray-700.hover:text-gray-900{:href => "#"}
-      Conditions
-    %a.text-gray-700.hover:text-gray-900{:href => "#"}
-      Privacy
-    %a.text-gray-700.hover:text-gray-900{:href => "#"}
-      Policy
+%footer{class: "font-messiri py-4 px-4 shadow-md z-10 bg-stone-200"}
+  %div{class: "flex flex-col md:flex-row md:justify-content-center md:align-items-center"}
+    %div{class: "text-sm text-gray-600"}
+      Copyright © 2022-#{Date.today.strftime('%Y')}
+      = link_to "Швейна майстерня ☞ ДРУЖБА ☜", root_path, onclick: "window.location.reload(true);", class: "px-2"
+    %div{class: "text-sm text-gray-600 md:ml-auto justify-content-center align-items-center"}
+      %a{href: "mailto:admin@druzhba.biz.ua"} admin@druzhba.biz.ua
