--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -6,7 +6,7 @@
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
+      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
         Заміна замків у верхньому та легкому одягу
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
@@ -14,14 +14,14 @@
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
+      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
         Штопка (штуковка джинсових виробів)
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  штуковка
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-2xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-3xl
+      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
         Ремонт шкіряних та хутрових виробів
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Ремонт шкіряних та хутрових виробів
